# OAuth2Client

./: .flake8  .gitignore  poetry.toml  pyproject.toml
.github/workflows/: pythonpackage.yml
main/oauth2_client/: credentials_manager.py
oauth2_client/: credentials_manager.py  http_server.py
tests/oauth2_client_tests/: test_credential_manager.py  test_http_server.py
