[tool.poetry]
name = "oauth2-client"
version = "1.4.2"
description = "A client library for OAuth2"
authors = ["Benjamin Einaudi <antechrestos@gmail.com>"]
readme = "README.rst"
homepage = "https://pypi.org/project/oauth2-client/"
documentation = "https://pypi.org/project/oauth2-client/"
repository = "https://github.com/antechrestos/OAuth2Client"
keywords = ["oauth2"]

[tool.poetry.dependencies]
python = ">=3.9"
requests = ">=2.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "~8.2.2"

[tool.pytest.ini_options]
console_output_style = "count"
pythonpath = [".", "tests",]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
